src/fsassembler/src/bnfc output/parse.output
Terminals which are not used

   _ERROR_


Grammar

    0 $accept: Code $end

    1 Code: ListOperation

    2 ListOperation: /* empty */
    3              | ListOperation Operation

    4 Operation: _SYMB_14 Register _SYMB_0 _INTEGER_
    5          | _SYMB_80 Register _SYMB_0 _INTEGER_
    6          | _IDENT_ _SYMB_1
    7          | _SYMB_73 Operand
    8          | _SYMB_70 Operand
    9          | _SYMB_71 Operand
   10          | _SYMB_72 Operand
   11          | _SYMB_74 Operand
   12          | _SYMB_76 Operand
   13          | _SYMB_75 Operand
   14          | _SYMB_15 Operand
   15          | _SYMB_79
   16          | _SYMB_78 Operand
   17          | _SYMB_77 Operand
   18          | _SYMB_25
   19          | _SYMB_28
   20          | _SYMB_26
   21          | _SYMB_27
   22          | _SYMB_64
   23          | _SYMB_65
   24          | _SYMB_66
   25          | _SYMB_54
   26          | _SYMB_40
   27          | _SYMB_41
   28          | _SYMB_60
   29          | _SYMB_38
   30          | _SYMB_56
   31          | _SYMB_57
   32          | _SYMB_55
   33          | _SYMB_61
   34          | _SYMB_58
   35          | _SYMB_59
   36          | _SYMB_24
   37          | _SYMB_68
   38          | _SYMB_69
   39          | _SYMB_37
   40          | _SYMB_29
   41          | _SYMB_30
   42          | _SYMB_31
   43          | _SYMB_32
   44          | _SYMB_33
   45          | _SYMB_34
   46          | _SYMB_35
   47          | _SYMB_36
   48          | _SYMB_47 Operand
   49          | _SYMB_43 Operand
   50          | _SYMB_47 _SYMB_2
   51          | _SYMB_47 _SYMB_3
   52          | _SYMB_53
   53          | _SYMB_48
   54          | _SYMB_52
   55          | _SYMB_49
   56          | _SYMB_51
   57          | _SYMB_50
   58          | _SYMB_62 Operand
   59          | _SYMB_45 Operand
   60          | _SYMB_63 Operand
   61          | _SYMB_46 Operand
   62          | _SYMB_63 _SYMB_2
   63          | _SYMB_42 _SYMB_2
   64          | _SYMB_42 _SYMB_3
   65          | _SYMB_42 _SYMB_4
   66          | _SYMB_42 _SYMB_5
   67          | _SYMB_42 _SYMB_6
   68          | _SYMB_42 _SYMB_7
   69          | _SYMB_42 _SYMB_8
   70          | _SYMB_42 _SYMB_9
   71          | _SYMB_67
   72          | _SYMB_44
   73          | _SYMB_39

   74 Register: _SYMB_16
   75         | _SYMB_19
   76         | _SYMB_21
   77         | _SYMB_18
   78         | _SYMB_23
   79         | _SYMB_17
   80         | _SYMB_22
   81         | _SYMB_20

   82 Operand: Register
   83        | _SYMB_81
   84        | _IDENT_
   85        | _SYMB_10 _SYMB_81 _SYMB_11
   86        | _SYMB_10 Register _SYMB_11
   87        | _SYMB_10 Register _SYMB_12 _INTEGER_ _SYMB_11
   88        | _SYMB_10 Register _SYMB_13 _INTEGER_ _SYMB_11


Terminals, with rules where they appear

$end (0) 0
error (256)
_ERROR_ (258)
_SYMB_0 (259) 4 5
_SYMB_1 (260) 6
_SYMB_2 (261) 50 62 63
_SYMB_3 (262) 51 64
_SYMB_4 (263) 65
_SYMB_5 (264) 66
_SYMB_6 (265) 67
_SYMB_7 (266) 68
_SYMB_8 (267) 69
_SYMB_9 (268) 70
_SYMB_10 (269) 85 86 87 88
_SYMB_11 (270) 85 86 87 88
_SYMB_12 (271) 87
_SYMB_13 (272) 88
_SYMB_14 (273) 4
_SYMB_15 (274) 14
_SYMB_16 (275) 74
_SYMB_17 (276) 79
_SYMB_18 (277) 77
_SYMB_19 (278) 75
_SYMB_20 (279) 81
_SYMB_21 (280) 76
_SYMB_22 (281) 80
_SYMB_23 (282) 78
_SYMB_24 (283) 36
_SYMB_25 (284) 18
_SYMB_26 (285) 20
_SYMB_27 (286) 21
_SYMB_28 (287) 19
_SYMB_29 (288) 40
_SYMB_30 (289) 41
_SYMB_31 (290) 42
_SYMB_32 (291) 43
_SYMB_33 (292) 44
_SYMB_34 (293) 45
_SYMB_35 (294) 46
_SYMB_36 (295) 47
_SYMB_37 (296) 39
_SYMB_38 (297) 29
_SYMB_39 (298) 73
_SYMB_40 (299) 26
_SYMB_41 (300) 27
_SYMB_42 (301) 63 64 65 66 67 68 69 70
_SYMB_43 (302) 49
_SYMB_44 (303) 72
_SYMB_45 (304) 59
_SYMB_46 (305) 61
_SYMB_47 (306) 48 50 51
_SYMB_48 (307) 53
_SYMB_49 (308) 55
_SYMB_50 (309) 57
_SYMB_51 (310) 56
_SYMB_52 (311) 54
_SYMB_53 (312) 52
_SYMB_54 (313) 25
_SYMB_55 (314) 32
_SYMB_56 (315) 30
_SYMB_57 (316) 31
_SYMB_58 (317) 34
_SYMB_59 (318) 35
_SYMB_60 (319) 28
_SYMB_61 (320) 33
_SYMB_62 (321) 58
_SYMB_63 (322) 60 62
_SYMB_64 (323) 22
_SYMB_65 (324) 23
_SYMB_66 (325) 24
_SYMB_67 (326) 71
_SYMB_68 (327) 37
_SYMB_69 (328) 38
_SYMB_70 (329) 8
_SYMB_71 (330) 9
_SYMB_72 (331) 10
_SYMB_73 (332) 7
_SYMB_74 (333) 11
_SYMB_75 (334) 13
_SYMB_76 (335) 12
_SYMB_77 (336) 17
_SYMB_78 (337) 16
_SYMB_79 (338) 15
_SYMB_80 (339) 5
_SYMB_81 (340) 83 85
_INTEGER_ (341) 4 5 87 88
_IDENT_ (342) 6 84


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
Code (89)
    on left: 1, on right: 0
ListOperation (90)
    on left: 2 3, on right: 1 3
Operation (91)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73, on right: 3
Register (92)
    on left: 74 75 76 77 78 79 80 81, on right: 4 5 82 86 87 88
Operand (93)
    on left: 82 83 84 85 86 87 88, on right: 7 8 9 10 11 12 13 14 16
    17 48 49 58 59 60 61


state 0

    0 $accept: . Code $end

    $default  reduce using rule 2 (ListOperation)

    Code           go to state 1
    ListOperation  go to state 2


state 1

    0 $accept: Code . $end

    $end  shift, and go to state 3


state 2

    1 Code: ListOperation .
    3 ListOperation: ListOperation . Operation

    _SYMB_14  shift, and go to state 4
    _SYMB_15  shift, and go to state 5
    _SYMB_24  shift, and go to state 6
    _SYMB_25  shift, and go to state 7
    _SYMB_26  shift, and go to state 8
    _SYMB_27  shift, and go to state 9
    _SYMB_28  shift, and go to state 10
    _SYMB_29  shift, and go to state 11
    _SYMB_30  shift, and go to state 12
    _SYMB_31  shift, and go to state 13
    _SYMB_32  shift, and go to state 14
    _SYMB_33  shift, and go to state 15
    _SYMB_34  shift, and go to state 16
    _SYMB_35  shift, and go to state 17
    _SYMB_36  shift, and go to state 18
    _SYMB_37  shift, and go to state 19
    _SYMB_38  shift, and go to state 20
    _SYMB_39  shift, and go to state 21
    _SYMB_40  shift, and go to state 22
    _SYMB_41  shift, and go to state 23
    _SYMB_42  shift, and go to state 24
    _SYMB_43  shift, and go to state 25
    _SYMB_44  shift, and go to state 26
    _SYMB_45  shift, and go to state 27
    _SYMB_46  shift, and go to state 28
    _SYMB_47  shift, and go to state 29
    _SYMB_48  shift, and go to state 30
    _SYMB_49  shift, and go to state 31
    _SYMB_50  shift, and go to state 32
    _SYMB_51  shift, and go to state 33
    _SYMB_52  shift, and go to state 34
    _SYMB_53  shift, and go to state 35
    _SYMB_54  shift, and go to state 36
    _SYMB_55  shift, and go to state 37
    _SYMB_56  shift, and go to state 38
    _SYMB_57  shift, and go to state 39
    _SYMB_58  shift, and go to state 40
    _SYMB_59  shift, and go to state 41
    _SYMB_60  shift, and go to state 42
    _SYMB_61  shift, and go to state 43
    _SYMB_62  shift, and go to state 44
    _SYMB_63  shift, and go to state 45
    _SYMB_64  shift, and go to state 46
    _SYMB_65  shift, and go to state 47
    _SYMB_66  shift, and go to state 48
    _SYMB_67  shift, and go to state 49
    _SYMB_68  shift, and go to state 50
    _SYMB_69  shift, and go to state 51
    _SYMB_70  shift, and go to state 52
    _SYMB_71  shift, and go to state 53
    _SYMB_72  shift, and go to state 54
    _SYMB_73  shift, and go to state 55
    _SYMB_74  shift, and go to state 56
    _SYMB_75  shift, and go to state 57
    _SYMB_76  shift, and go to state 58
    _SYMB_77  shift, and go to state 59
    _SYMB_78  shift, and go to state 60
    _SYMB_79  shift, and go to state 61
    _SYMB_80  shift, and go to state 62
    _IDENT_   shift, and go to state 63

    $default  reduce using rule 1 (Code)

    Operation  go to state 64


state 3

    0 $accept: Code $end .

    $default  accept


state 4

    4 Operation: _SYMB_14 . Register _SYMB_0 _INTEGER_

    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72

    Register  go to state 73


state 5

   14 Operation: _SYMB_15 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 78


state 6

   36 Operation: _SYMB_24 .

    $default  reduce using rule 36 (Operation)


state 7

   18 Operation: _SYMB_25 .

    $default  reduce using rule 18 (Operation)


state 8

   20 Operation: _SYMB_26 .

    $default  reduce using rule 20 (Operation)


state 9

   21 Operation: _SYMB_27 .

    $default  reduce using rule 21 (Operation)


state 10

   19 Operation: _SYMB_28 .

    $default  reduce using rule 19 (Operation)


state 11

   40 Operation: _SYMB_29 .

    $default  reduce using rule 40 (Operation)


state 12

   41 Operation: _SYMB_30 .

    $default  reduce using rule 41 (Operation)


state 13

   42 Operation: _SYMB_31 .

    $default  reduce using rule 42 (Operation)


state 14

   43 Operation: _SYMB_32 .

    $default  reduce using rule 43 (Operation)


state 15

   44 Operation: _SYMB_33 .

    $default  reduce using rule 44 (Operation)


state 16

   45 Operation: _SYMB_34 .

    $default  reduce using rule 45 (Operation)


state 17

   46 Operation: _SYMB_35 .

    $default  reduce using rule 46 (Operation)


state 18

   47 Operation: _SYMB_36 .

    $default  reduce using rule 47 (Operation)


state 19

   39 Operation: _SYMB_37 .

    $default  reduce using rule 39 (Operation)


state 20

   29 Operation: _SYMB_38 .

    $default  reduce using rule 29 (Operation)


state 21

   73 Operation: _SYMB_39 .

    $default  reduce using rule 73 (Operation)


state 22

   26 Operation: _SYMB_40 .

    $default  reduce using rule 26 (Operation)


state 23

   27 Operation: _SYMB_41 .

    $default  reduce using rule 27 (Operation)


state 24

   63 Operation: _SYMB_42 . _SYMB_2
   64          | _SYMB_42 . _SYMB_3
   65          | _SYMB_42 . _SYMB_4
   66          | _SYMB_42 . _SYMB_5
   67          | _SYMB_42 . _SYMB_6
   68          | _SYMB_42 . _SYMB_7
   69          | _SYMB_42 . _SYMB_8
   70          | _SYMB_42 . _SYMB_9

    _SYMB_2  shift, and go to state 79
    _SYMB_3  shift, and go to state 80
    _SYMB_4  shift, and go to state 81
    _SYMB_5  shift, and go to state 82
    _SYMB_6  shift, and go to state 83
    _SYMB_7  shift, and go to state 84
    _SYMB_8  shift, and go to state 85
    _SYMB_9  shift, and go to state 86


state 25

   49 Operation: _SYMB_43 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 87


state 26

   72 Operation: _SYMB_44 .

    $default  reduce using rule 72 (Operation)


state 27

   59 Operation: _SYMB_45 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 88


state 28

   61 Operation: _SYMB_46 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 89


state 29

   48 Operation: _SYMB_47 . Operand
   50          | _SYMB_47 . _SYMB_2
   51          | _SYMB_47 . _SYMB_3

    _SYMB_2   shift, and go to state 90
    _SYMB_3   shift, and go to state 91
    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 92


state 30

   53 Operation: _SYMB_48 .

    $default  reduce using rule 53 (Operation)


state 31

   55 Operation: _SYMB_49 .

    $default  reduce using rule 55 (Operation)


state 32

   57 Operation: _SYMB_50 .

    $default  reduce using rule 57 (Operation)


state 33

   56 Operation: _SYMB_51 .

    $default  reduce using rule 56 (Operation)


state 34

   54 Operation: _SYMB_52 .

    $default  reduce using rule 54 (Operation)


state 35

   52 Operation: _SYMB_53 .

    $default  reduce using rule 52 (Operation)


state 36

   25 Operation: _SYMB_54 .

    $default  reduce using rule 25 (Operation)


state 37

   32 Operation: _SYMB_55 .

    $default  reduce using rule 32 (Operation)


state 38

   30 Operation: _SYMB_56 .

    $default  reduce using rule 30 (Operation)


state 39

   31 Operation: _SYMB_57 .

    $default  reduce using rule 31 (Operation)


state 40

   34 Operation: _SYMB_58 .

    $default  reduce using rule 34 (Operation)


state 41

   35 Operation: _SYMB_59 .

    $default  reduce using rule 35 (Operation)


state 42

   28 Operation: _SYMB_60 .

    $default  reduce using rule 28 (Operation)


state 43

   33 Operation: _SYMB_61 .

    $default  reduce using rule 33 (Operation)


state 44

   58 Operation: _SYMB_62 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 93


state 45

   60 Operation: _SYMB_63 . Operand
   62          | _SYMB_63 . _SYMB_2

    _SYMB_2   shift, and go to state 94
    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 95


state 46

   22 Operation: _SYMB_64 .

    $default  reduce using rule 22 (Operation)


state 47

   23 Operation: _SYMB_65 .

    $default  reduce using rule 23 (Operation)


state 48

   24 Operation: _SYMB_66 .

    $default  reduce using rule 24 (Operation)


state 49

   71 Operation: _SYMB_67 .

    $default  reduce using rule 71 (Operation)


state 50

   37 Operation: _SYMB_68 .

    $default  reduce using rule 37 (Operation)


state 51

   38 Operation: _SYMB_69 .

    $default  reduce using rule 38 (Operation)


state 52

    8 Operation: _SYMB_70 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 96


state 53

    9 Operation: _SYMB_71 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 97


state 54

   10 Operation: _SYMB_72 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 98


state 55

    7 Operation: _SYMB_73 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 99


state 56

   11 Operation: _SYMB_74 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 100


state 57

   13 Operation: _SYMB_75 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
    _SYMB_22  shift, and go to state 71
    _SYMB_23  shift, and go to state 72
    _SYMB_81  shift, and go to state 75
    _IDENT_   shift, and go to state 76

    Register  go to state 77
    Operand   go to state 101


state 58

   12 Operation: _SYMB_76 . Operand

    _SYMB_10  shift, and go to state 74
    _SYMB_16  shift, and go to state 65
    _SYMB_17  shift, and go to state 66
    _SYMB_18  shift, and go to state 67
    _SYMB_19  shift, and go to state 68
    _SYMB_20  shift, and go to state 69
    _SYMB_21  shift, and go to state 70
